package dcmd_api;
option java_package = "com.cwinux.dcmd";
import "dcmd_cmn.proto";

message UiTaskOutput {
  required  int32     client_msg_id=1;
  required  string    subtask_id=2;
  required  string    ip = 3; 
  required  int32     offset=4; 
  required  string    user=5;
  required  string    passwd=6;
}

message UiTaskOutputReply {
  required  int32       client_msg_id=1;
  required  DcmdState   state = 2;
  required  string      result= 3;
  required  int32       offset=4;
  optional  string      err=5;
}

message UiAgentRunningTask {
  required  int32     client_msg_id=1;
  optional  string    ip=2;
  optional  string    svr_pool=3;
  required  string    user=4;
  required  string    passwd=5;
}

message UiAgentRunningTaskReply {
  required  int32       client_msg_id=1;
  required  DcmdState   state=2;
  repeated  SubTaskInfo result=3;
  optional  string      err=4;
}

message UiAgentRunningOpr {
  required  int32     client_msg_id=1;
  optional  string    ip=2;
  required  string    user=3;
  required  string    passwd=4;
}

message UiAgentRunningOprReply {
  required  int32     client_msg_id=1;
  required  DcmdState state=2;
  repeated  OprInfo   result=3;
  optional  string    err=4;
}

message UiExecOprCmd {
  required  int32     client_msg_id=1;
  optional  string   opr_id=2;
  repeated  KeyValue args=3;
  repeated  string   agents=4;
  required  string   user=5;
  required  string   passwd=6;
}

message UiExecOprCmdReply{
  required  int32            client_msg_id=1;
  required  DcmdState        state=2;
  repeated  AgentOprCmdReply result=3;
  optional  string           err=4;
}

message UiAgentInfo {
  required  int32     client_msg_id=1;
  repeated  string    ips=2;
  required  bool      version=3;
  required  string    user=4;
  required  string    passwd=5;
}

message UiAgentInfoReply{
  required  int32      client_msg_id=1;
  required  DcmdState  state=2;
  repeated  AgentInfo  agentinfo=3;
  optional  string     err=4;
}

message UiInvalidAgentInfo {
  required  int32   client_msg_id=1;
  required  string  user=2;
  required  string  passwd=3;
}

message UiInvalidAgentInfoReply{
  required  int32      client_msg_id=1;
  required  DcmdState  state=2;
  repeated  AgentInfo  agentinfo=3;
  optional  string     err=4;
}

message UiTaskScriptInfo {
  required  int32   client_msg_id=1;
  required  string  task_cmd=2;
  required  string  user=3;
  required  string  passwd=4;
}

message UiTaskScriptInfoReply{
  required  int32     client_msg_id=1;
  required  DcmdState state=2;
  optional  string    script=3;
  optional  string    err=4;
  optional  string    md5=5;
}

message UiOprScriptInfo {
  required  int32   client_msg_id=1;
  required  string  opr_file=2;
  required  string  user=3;
  required  string  passwd=4;
}

message UiOprScriptInfoReply{
  required  int32     client_msg_id=1;
  required  DcmdState state=2;
  optional  string    script=3;
  optional  string    err=4;
  optional  string    md5=5;
}

message UiAgentTaskProcess {
  required  int32   client_msg_id=1;
  repeated  string  subtask_id =2;
  required  string  user=3;
  required  string  passwd=4;
}

message UiAgentTaskProcessReply{
  required  int32     client_msg_id=1;
  required  DcmdState state=2;
  repeated SubTaskProcess process = 3;
  optional  string    err=4;
}


message UiTaskCmd {
  required  int32   client_msg_id=1;
  required  string  task_id =2;
  required  int32   uid = 3;
  optional  string  subtask_id=4;
  optional  string  ip=5;
  optional  string  svr_name=6;
  optional  string  svr_pool=7;
  optional  int32   concurrent_num=8;
  optional  int32   concurrent_rate=9;
  optional  int32   task_timeout=10;
  optional  bool    auto=11;
  required  CmdType cmd_type = 12;
  required  string  user=13;
  required  string  passwd=14;
}

message UiTaskCmdReply{
  required  int32     client_msg_id=1;
  required  DcmdState state=2;
  optional  string    err=4;
}

message UiAgentHostName {
  required  int32   client_msg_id=1;
  required  string  agent_ip =2;
  required  string  user=3;
  required  string  passwd=4;
}

message UiAgentHostNameReply{
  required  int32       client_msg_id=1;
  required  DcmdState   state=2;
  required  bool        is_exist=3;
  required  string      hostname=4;
  optional  string      err=5;
}

message UiAgentValid {
  required  int32   client_msg_id=1;
  required  string  agent_ip =2;
  required  string  user=3;
  required  string  passwd=4;
}

message UiAgentValidReply{
  required  int32       client_msg_id=1;
  required  DcmdState   state=2;
  optional  string      err=3;
}
